--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-material-you",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "React hook to create dynamic schemes and variants based on M3/material-color-utilities",
   "author": "Maicon Carraro (https://github.com/maiconcarraro)",
   "homepage": "https://github.com/maiconcarraro/use-material-you",
@@ -42,23 +42,24 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.13.1",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/node": "^24.0.10",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@vitejs/plugin-react": "^4.6.0",
     "dts-bundle-generator": "^9.5.1",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.5.0",
-    "stylelint": "^16.14.1",
-    "stylelint-config-recommended": "^14.0.1",
-    "stylelint-config-sass-guidelines": "^11.1.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
+    "stylelint": "^16.21.0",
+    "stylelint-config-recommended": "^16.0.0",
+    "stylelint-config-sass-guidelines": "^12.1.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.0",
-    "vite-plugin-dts": "^4.5.0"
-  }
+    "typescript": "^5.8.3",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "^4.5.4"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
